added mock test cases and doc routes
